# bpm

./: docker-compose.dev.yml  pyproject.toml
src/apps/: urls.py
src/apps/api/: tests.py  utils.py
src/apps/api/serializers/: __init__.py  token.py
src/apps/api/urls/: __init__.py  tasks.py  token.py
src/apps/api/viewsets/: __init__.py  token.py
src/apps/common/decorators/: admin.py
src/apps/common/mixins/: models.py
src/apps/tasks/: __init__.py  admin.py  models.py
src/apps/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_remove_businessprocess_has_row_numbers_and_more.py  0004_businessprocess_uuid.py  0005_alter_businessprocess_dgd_code_column_and_more.py  0006_alter_businessprocess_dgd_name_column_and_more.py  0007_alter_task_index.py  0008_alter_taskcell_value.py  0009_remove_businessprocess_deadline.py  0010_taskstatus.py  0011_delete_taskstatus.py  0012_taskstatus.py  0013_alter_taskstatus_required_task_columns.py  0014_task_status_taskdelegation_taskcomment.py  0015_alter_taskcellvaluelog_new_value_and_more.py  0016_alter_taskdelegation_delegated_to_group.py  0017_remove_taskdelegation_delegated_to_group_and_more.py  0018_alter_businessprocess_status_and_more.py  0019_taskcell_column_index_taskcell_column_type_and_more.py
src/apps/users/: __init__.py  admin.py  crypt.py  managers.py  models.py
src/apps/web/: urls.py
src/config/: urls.py
src/config/settings/: base.py  development.py
src/resources/bpm/: surcentr-chain.pem  surcentr.pem
src/templates/admin/: action_confirmation.html
src/templates/web/: base.html  base_site.html
(+58 files in other folders)
